--- a/final/design.tex
+++ b/final/design.tex
@@ -404,5 +404,4 @@ with improvements by Wang~\cite{wang} and the Zykov algorithm~\cite{corneil}.  I
 algorithms satisfy the stated requirements, the Christofides/Wang algorithm is faster and can handle up to \(30\)
 vertices.  A new algorithm is then proposed that is a modification of the Zykov algorithm in an attempt to match
 the advantages of the Christofides/Wang algorithm.  It will be shown that this proposed algorithm can also handle
-up to \(30\) vertices; however, it appears that the Christofides/Wang algorithm still enjoys a slight speed
-advantage.
+up to \(30\) vertices and runs faster than the Christofides/Wang algorithm for problems in the target range.
