Updated called routine flow

--- a/final/algorithm.tex
+++ b/final/algorithm.tex
@@ -234,75 +234,68 @@ A flowchart of these steps is shown in \figurename~\ref{fig:called}.
 
 \begin{figure}[H]
   \centering
-  \scalebox{0.5}{
+  \scalebox{0.55}{
     \begin{tikzpicture}[>=latex']
       \node (start) [draw,terminal] at (0,0) {START};
-      \node (sinit) [draw,process,below=of start] {\(S'=\emptyset\)};
-      \node (donecheck) [draw,decision,below=of sinit] {\(n\le k\)?};
-      \node (done) [draw,terminal,right=of donecheck] {RETURN \(G\),TRUE};
-      \node (edgecalc) [draw,process,below=of donecheck] {\(a=\frac{n^2(k-1)}{2k}\)};
-      \node (edgecheck) [draw,decision,below=of edgecalc] {\(m>a\)?};
-      \node (nodecalc) [draw,process,below=of edgecheck] {\(X=\setb{v\in V(G)}{\deg(v)<k}\)};
-      \node (nodecheck) [draw,decision,below=of nodecalc] {\(X\ne\emptyset\)?};
-      \node (remnode) [draw,process,left=of nodecheck] {\(\begin{array}{c}G=G-X \\ S'=S'\cup X\end{array}\)};
-      \node (join) [coordinate] at ($(remnode)-(2.5cm,0)$) {};
-      \node (kadj) [draw,decision,below=of nodecheck] {\(n<k_{adj}\)?};
-      \node (adjust) [draw,process,below=of kadj] {\(k_{adj}=n\)};
-      \node (edwards) [draw,predproc,below=of adjust] {EDWARDS \(G\)};
-      \node (bound) [draw,decision,below=of edwards] {\(\ell<k_{adj}\)?};
-      \node (bfail) [draw,terminal,right=of bound] {RETURN \(G\),FALSE};
-      \node (common) [draw,process,below=of bound] {Calculate \(\abs{N(u)\cap N(v)}\)};
+      \node (kcheck) [draw,decision,below=of start] {\(n\le k\)?};
+      \node (rtrue1) [draw,process,right=2cm of kcheck] {\(R=\)TRUE};
+      \node (return1) [draw,terminal,below=of rtrue1] {RETURN \(R,G,S\)};
+      \node (ecalc) [draw,process,below=of kcheck] {\(a=\frac{n^2(k-1)}{2k}\)};
+      \node (echeck) [draw,decision,below=of ecalc] {\(m\le a\)?};
+      \node (xcalc) [draw,process,below=of echeck] {\(X=\setb{v\in V(G)}{\deg(v)<k}\)};
+      \node (xcheck) [draw,decision,below=of xcalc] {\(X=\emptyset\)?};
+      \node (remnode) [draw,process,left=of xcheck] {\(\begin{array}{c} G=G-X \\ S=S+X \end{array}\)};
+      \node (xjoin) [coordinate] at ($(remnode)-(2cm,0)$) {};
+      \node (common) [draw,process,below=of xcheck] {\(\abs{N(u)\cap N(v)}\)};
       \node (subcheck) [draw,decision,below=of common] {\(N(u)\subseteq N(v)\)?};
-      \node (remsub) [draw,process,left=of subcheck] {\(G=G\cdot uv\)};
-      \node (mininter) [draw,process,right=2.5cm of done] {\(\displaystyle b=\min_{u,v\in V(G)}\abs{N(u)\cap N(v)}\)};
-      \node (intercalc) [draw,process,below=of mininter] {\(c=n-2-\frac{n-2}{k-1}\)};
-      \node (intercheck) [draw,decision,below=of intercalc] {\(b>c\)?};
-      \node (interfail) [draw,terminal,right=of intercheck] {RETURN \(G\),FALSE};
-      \node (finduv) [draw,process,below=of intercheck] {\(\displaystyle \min_{uv\notin E(G)}\abs{N(u)\cap N(v)}\)};
-      \node (save1) [draw,process,below=of finduv] {\(G'=G\cdot uv\)};
-      \node (call1) [draw,predproc,below=of save1] {CALL \(G',k\)};
-      \node (check1) [draw,decision,below=of call1] {\(R=\)TRUE?};
-      \node (save2) [draw,process,below=of check1] {\(G'=G+uv\)};
-      \node (call2) [draw,predproc,below=of save2] {CALL \(G',k\)};
-      \node (check2) [draw,decision,below=of call2] {\(R=\)TRUE?};
-      \node (sup2) [draw,process,right=3cmof check2] {\(S=S'\)};
-      \node (done2) [draw,terminal,below=of sup2] {RETURN \(G\),TRUE};
-      \node (fail) [draw,terminal,below=of check2] {RETURN \(G\),FALSE};
-      \draw [->] (start) -- node [auto] {\(G,k\)} (sinit);
-      \draw [->] (sinit) -- (donecheck);
-      \draw [->] (donecheck) -- node [auto] {YES} (done);
-      \draw [->] (donecheck) -- node [auto] {NO} (edgecalc);
-      \draw [->] (edgecalc) -- (edgecheck);
-      \draw [->] (edgecheck) -| node [auto] {YES} (bfail);
-      \draw [->] (edgecheck) -- node [auto] {NO} (nodecalc);
-      \draw [->] (nodecalc) -- (nodecheck);
-      \draw [->] (nodecheck) -- node [auto] {YES} (remnode);
-      \draw [->] (remnode) -- (join) |- (donecheck);
-      \draw [->] (nodecheck) -- node [auto] {NO} (kadj);
-      \draw [->] (kadj) -- node [auto] {YES} (adjust);
-      \draw [->] (kadj) -- node [auto] {NO} ($(kadj)+(3cm,0)$) |- (edwards);
-      \draw [->] (adjust) -- (edwards);
-      \draw [->] (edwards) -- node [auto] {\(\ell\)} (bound);
-      \draw [->] (bound) -- node [auto] {YES} (common);
-      \draw [->] (bound) -- node [auto] {NO} (bfail);
+      \node (subcon) [draw,process,left=of subcheck] {\(G=G\cdot uv\)};
+      \node (mincom) [draw,process,below=of subcheck] {\(b=\min\abs{N(u)\cap N(v)}\)};
+      \node (mincalc) [draw,process,below=of mincom] {\(c=n-2-\frac{n-2}{k-1}\)};
+      \node (mincheck) [draw,decision,below=of mincalc] {\(b\le c\)?};
+      \node (mjoin) [coordinate] at ($(mincheck)+(4cm,0)$) {};
+      \node (lbcalc) [draw,predproc,below=of mincheck] {EDWARDS \(G\)};
+      \node (lbcheck) [draw,decision,below=of lbcalc] {\(\ell\le k\)?};
+      \node (rfalse1) [draw,process,right=2cm of lbcheck] {\(R=\)FALSE};
+      \node (return2) [draw, terminal,below=of rfalse1] {RETURN \(R,G,S\)};
+      \node (save1) [draw,process,right=6cm of rtrue1] {\(\begin{array}{c} G'=G\cdot uv \\ S'=S \end{array}\)};
+      \node (call1) [draw,predproc,below=of save1] {CALL \(G',S',k\)};
+      \node (check1) [draw,decision,below=of call1] {\(R\)?};
+      \node (save2) [draw,process,below=of check1] {\(\begin{array}{c} G'=G+uv \\ S'=S \end{array}\)};
+      \node (call2) [draw,predproc,below=of save2] {CALL \(G',S',k\)};
+      \node (check2) [draw,decision,below=of call2] {\(R\)?};
+      \node (return3) [draw,terminal,below=of check2] {RETURN \(R,G,S\)};
+      \node (update) [draw,process,right=3cm of check2] {\(\begin{array}{c} G=G' \\ S=S' \end{array}\)};
+      \draw [->] (start) -- node [auto] {\(G,S,k\)} (kcheck);
+      \draw [->] (kcheck) -- node [auto,pos=0.2] {YES} (rtrue1);
+      \draw [->] (rtrue1) -- (return1);
+      \draw [->] (kcheck) -- node [auto] {NO} (ecalc);
+      \draw [->] (ecalc) -- (echeck);
+      \draw [->] (echeck) -- node [auto] {YES} (xcalc);
+      \draw [->] (xcalc) -- (xcheck);
+      \draw [->] (xcheck) -- node [auto,swap] {NO} (remnode) -- (xjoin);
+      \draw [->] (xcheck) -- node [auto] {YES} (common);
       \draw [->] (common) -- (subcheck);
-      \draw [->] (subcheck) -- node [auto] {YES} (remsub);
-      \draw (remsub) -| (join);
-      \draw [->] (subcheck) -- node [auto] {NO} ($(subcheck)-(0,3cm)$) -- ++(7cm,0) |- (mininter);
-      \draw [->] (mininter) -- (intercalc);
-      \draw [->] (intercalc) -- (intercheck);
-      \draw [->] (intercheck) -- node [auto] {YES} (interfail);
-      \draw [->] (intercheck) -- node [auto] {NO} (finduv);
-      \draw [->] (finduv) -- (save1);
+      \draw [->] (subcheck) -- node [auto,swap] {YES} (subcon);
+      \draw [->] (subcon) -| (xjoin) |- (kcheck);
+      \draw [->] (subcheck) -- node [auto] {NO} (mincom);
+      \draw [->] (mincom) -- (mincalc);
+      \draw [->] (mincalc) -- (mincheck);
+      \draw [->] (mincheck) -- node [auto] {YES} (lbcalc);
+      \draw [->] (mincheck) -- node [auto,pos=0.2] {NO} (mjoin);
+      \draw [->] (lbcalc) -- node [auto] {\(\ell\)} (lbcheck);
+      \draw [->] (lbcheck) -- node [auto,pos=0.2] {NO} (rfalse1);
+      \draw [->] (echeck) -| node [auto,pos=0.1] {NO} (mjoin) -- (rfalse1);
+      \draw [->] (rfalse1) -- (return2);
+      \draw [->] (lbcheck) -- node [auto,pos=0.2] {YES} ++(0,-3cm) -- ++(8cm,0) |- (save1);
       \draw [->] (save1) -- (call1);
-      \draw [->] (call1) -- node [auto] {\(G'',R\)} (check1);
-      \draw [->] (check1) -| node [auto] {YES} (sup2);
+      \draw [->] (call1) -- node [auto] {\(R,G',S'\)} (check1);
       \draw [->] (check1) -- node [auto] {NO} (save2);
       \draw [->] (save2) -- (call2);
-      \draw [->] (call2) -- node [auto] {\(G'',R\)} (check2);
-      \draw [->] (check2) -- node [auto] {YES} (sup2);
-      \draw [->] (sup2) -- (done2);
-      \draw [->] (check2) -- node [auto] {NO} (fail);
+      \draw [->] (call2) -- node [auto] {\(R,G',S'\)} (check2);
+      \draw [->] (check2) -- node [auto] {NO} (return3);
+      \draw [->] (check2) -- node [auto,pos=0.2] {YES} (update);
+      \draw [->] (check1) -| node [auto,pos=0.1] {YES} (update);
+      \draw [->] (update) |- (return3);
     \end{tikzpicture}
   }
   \caption{The proposed algorithm recursive subroutine.}
